--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,7 +18,7 @@ model_params:
     n_gpu_layers: 32
     n_ctx: 1024
   llama_model:
-    model_path: ${hydra:runtime.cwd}./models/llama-2-7b.Q4_K_S.gguf
+    model_path: ${hydra:runtime.cwd}./models/llama-2-7b-chat.Q4_K_S.gguf
     n_gpu_layers: 32
     n_ctx: 4096
     temperature: 0
