--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ llama-cpp-python~=0.2.11
 requests~=2.31.0
 beautifulsoup4~=4.12.2
 hydra-core~=1.3.2
+unstructured~=0.10.29
+Pygments~=2.16.1
+python-magic-bin~=0.4.14
+libmagic~=1.0
